Fix tooltip on demo

--- a/sample.html
+++ b/sample.html
@@ -73,7 +73,7 @@
                         <label for="connectionHost">Connect to host:</label>
                         <input type="text" id="connectionHost" value="localhost" class="form-control" />
                         <div class="form-group form-inline">
-                            <label for="connectionUsingSecure" data-toggle="tooltip" title="HTTPS Only: Allow secure pages to connect to insecure locations.">
+                            <label for="connectionUsingSecure" data-toggle="tooltip" title="HTTPS Only: When disabled, allows secure pages to connect to insecure locations.">
                                 Secure
                             </label>
                             <input checked type="checkbox" id="connectionUsingSecure" class="pull-right"/>
