--- a/sample.html
+++ b/sample.html
@@ -1519,8 +1519,8 @@
             case 'EPL':
                 printData = [
                     '\nN\n',
-                    'q609\n',
-                    'Q203,26\n',
+                    'q812\n', //  q=width in dots - check printer dpi
+                    'Q1218,26\n', // Q=height in dots - check printer dpi
                     'B5,26,0,1A,3,7,152,B,"1234"\n',
                     'A310,26,0,3,1,1,N,"SKU 00000 MFG 0000"\n',
                     'A310,56,0,3,1,1,N,"TEST PRINT SUCCESSFUL"\n',
@@ -1801,8 +1801,8 @@
             case 'EPL':
                 printData = [
                     '\nN\n',
-                    'q609\n',
-                    'Q203,26\n',
+                    'q812\n',
+                    'Q1218,26\n',
                     { type: 'raw', format: 'pdf', flavor: 'file', data: 'assets/pdf_sample.pdf', options: opts },
                     '\nP1,1\n'
                 ];
@@ -1836,8 +1836,8 @@
             case 'EPL':
                 printData = [
                     '\nN\n',
-                    'q609\n',
-                    'Q203,26\n',
+                    'q812\n',
+                    'Q1218,26\n',
                     { type: 'raw', format: 'html', flavor: 'file', data: 'https://qz.io/about/', options: opts },
                     '\nP1,1\n'
                 ];
