Fix blank HTML printing on sample.html (#794)
Fix blank HTML printing on sample.html
Don't use page size if there is no page size to use

Co-authored-by: klabarge <kdlabarge@gmail.com>
Co-authored-by: Berenz <thebrettberenz@gmail.com>

--- a/sample.html
+++ b/sample.html
@@ -2926,7 +2926,7 @@
 
     function updateConfig(cleanConditions) {
         var pxlSize = null;
-        if (isChecked($("#pxlSizeActive"), cleanConditions['pxlSizeActive'])) {
+        if (isChecked($("#pxlSizeActive"), cleanConditions['pxlSizeActive']) && (($("#pxlSizeWidth").val() !== '') || ($("#pxlSizeHeight").val() !== ''))) {
             pxlSize = {
                 width: $("#pxlSizeWidth").val(),
                 height: $("#pxlSizeHeight").val()
