include hex for file writes

--- a/sample.html
+++ b/sample.html
@@ -1183,6 +1183,10 @@
                                                     <input type="radio" name="fileFlavor" id="fileFlavorURL" value="file" />
                                                     File
                                                 </label>
+                                                <label>
+                                                    <input type="radio" name="fileFlavor" id="fileFlavorHEX" value="hex" />
+                                                    Hexadecimal
+                                                </label>
                                             </div>
                                         </div>
                                         <div class="form-group">
