--- a/sample.html
+++ b/sample.html
@@ -2021,8 +2021,14 @@
             type: $("input[name='serialType']:checked").val(),
             data: $("#serialCmd").val()
         };
-        //allow some escape characters
-        serialData.data = serialData.data.replace(/\\n/g, "\n").replace(/\\r/g, "\r").replace(/\\t/g, "\t");
+
+        var fromHex = function(m, s1) {
+            return String.fromCharCode(parseInt(s1, 16));
+        };
+
+        //allow some escape characters (newlines, tabs, hex/unicode)
+        serialData.data = serialData.data.replace(/\\n/g, "\n").replace(/\\r/g, "\r").replace(/\\t/g, "\t")
+            .replace(/\\x([0-9A-Za-z]{2})/g, fromHex).replace(/\\u([0-9A-Za-z]{4})/g, fromHex);
 
         qz.serial.sendData($("#serialPort").val(), serialData, options).catch(displayError);
     }
