--- a/sample.html
+++ b/sample.html
@@ -2447,8 +2447,8 @@
     function resetRawOptions() {
         //config
         $("#rawSpoolSize").val(1);
-        $("#rawEncoding").val(null);
-        $("#rawSpoolEnd").val(null);
+        $("#rawEncoding").val("");
+        $("#rawSpoolEnd").val("");
         $("#rawForceRaw").prop('checked', false);
         $("#rawCopies").val(1);
 
@@ -2471,8 +2471,8 @@
         $("#pxlJobName").val("");
         $("#pxlLegacy").prop('checked', false);
         $("#pxlOrientation").val("");
-        $("#pxlPaperThickness").val(null);
-        $("#pxlPrinterTray").val(null);
+        $("#pxlPaperThickness").val("");
+        $("#pxlPrinterTray").val("");
         $("#pxlRasterize").prop('checked', false);
         $("#pxlRotation").val(0);
         $("#pxlSpoolSize").val("");
@@ -2531,7 +2531,7 @@
         $("#serialEnd").val('');
         $("#serialWidth").val('');
         $("#serialHeader").prop('checked', false);
-        $("#serialRespEncoding").val('');
+        $("#serialRespEncoding").val('UTF-8');
         $("#serialLenIndex").val('0');
         $("#serialLenLength").val('1');
         $("#serialLenEndianBig").prop('checked', true);
