Add support for IGP default resolution of 72dpi

--- a/sample.html
+++ b/sample.html
@@ -1884,6 +1884,7 @@
             case 'PGL':
                 // Printronix must reference logos by ID
                 opts.logoId = 'LOGO-QZ-1';
+                opts.igpDots = false;
 
                 printData = [
                     // Printronix logo should appear before form declarations
