--- a/sample.html
+++ b/sample.html
@@ -53,6 +53,9 @@
         <div class="col-md-4">
             <div id="qz-connection" class="panel panel-default">
                 <div class="panel-heading">
+                    <button class="close tip" data-toggle="tooltip" title="QZ Tray Menu" id="menu" href="#" onclick="qz.gui.showMenu(event);" style="display: none;">
+                        <i class="fa fa-bars"></i>
+                    </button>
                     <button class="close tip" data-toggle="tooltip" title="Launch QZ" id="launch" href="#" onclick="launchQZ();" style="display: none;">
                         <i class="fa fa-external-link"></i>
                     </button>
@@ -3017,8 +3020,10 @@
 
         if (text === "Inactive" || text === "Error") {
             $("#launch").show();
+            $("#menu").hide();
         } else {
             $("#launch").hide();
+            $("#menu").show();
         }
     }
 
