Remove menu code, add initial control dialog

--- a/sample.html
+++ b/sample.html
@@ -53,7 +53,7 @@
         <div class="col-md-4">
             <div id="qz-connection" class="panel panel-default">
                 <div class="panel-heading">
-                    <button class="close tip" data-toggle="tooltip" title="QZ Tray Menu" id="menu" href="#" onclick="qz.gui.showMenu(event);" style="display: none;">
+                    <button class="close tip" data-toggle="tooltip" title="QZ Tray Menu" id="menu" href="#" onclick="qz.gui.showMenu();" style="display: none;">
                         <i class="fa fa-bars"></i>
                     </button>
                     <button class="close tip" data-toggle="tooltip" title="Launch QZ" id="launch" href="#" onclick="launchQZ();" style="display: none;">
